
# 
#   Copyright (C) 2025 PML
#
#   This file is part of pml is free software: you
#   can redistribute it and/or modify it under the terms of the GNU Lesser
#   General Public License as published by the Free Software Foundation,
#   either version 2.1 of the License, or (at your option) any later version.
#
#   mapml is distributed in the hope that it will be useful,
#   but WITHOUT ANY WARRANTY; without even the implied warranty of
#   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
#   GNU Lesser General Public License for more details.
#
#   You should have received a copy of the GNU Lesser General Public License
#   along with mapml. If not, see <http://www.gnu.org/licenses/>. 



include_pmldir=$(includedir)/pml

include_pml_HEADERS=  fmpz_extra.h \
	nmod_extra.h \
	nmod_poly_mat_approximant.h	\
	nmod_poly_mat_multiply.h \
	fmpz_mat_extra.h \
	nmod_mat_extra.h \
	nmod_poly_mat_arith.h \
	nmod_poly_mat_utils.h \
	nmod_mat_poly.h \
	nmod_poly_mat_extra.h \
	nmod_vec_extra.h \
	nmod_poly_extra.h \
	nmod_poly_mat_forms.h \
	sagemath_extra.h \
	nmod_poly_fft.h \
	nmod_poly_mat_io.h

